<resources>
    <string name="app_name">PortfolioAdmin</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="email">Email</string>
    <string name="experience">Experience</string>
    <string name="projects">Project</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="update_profile">Update profile</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="add_expertise">Add Expertise</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_url">Project Url</string>
    <string name="designation">Designation</string>
    <string name="joined">Joined</string>
    <string name="resigned">Resigned</string>
    <string name="added_list">Added List</string>

    <string name="width">Width</string>
    <string name="height">Height</string>

    <!-- Aspect ratio names -->
    <string name="aspect_free">Free</string>
    <string name="aspect_ins_1_1">Ins 1:1</string>
    <string name="aspect_ins_4_5">Ins 4:5</string>
    <string name="aspect_ins_story">Story</string>
    <string name="aspect_5_4">5:4</string>
    <string name="aspect_3_4">3:4</string>
    <string name="aspect_4_3">4:3</string>
    <string name="aspect_face_post">Post</string>
    <string name="aspect_face_cover">Cover</string>
    <string name="aspect_pin_post">Post</string>
    <string name="aspect_3_2">3:2</string>
    <string name="aspect_9_16">9:16</string>
    <string name="aspect_16_9">16:9</string>
    <string name="aspect_1_2">1:2</string>
    <string name="aspect_you_cover">Cover</string>
    <string name="aspect_twit_post">Post</string>
    <string name="aspect_twit_header">Header</string>
    <string name="aspect_a_4">A4</string>
    <string name="aspect_a_5">A5</string>
</resources>