<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.view.ActivityHome"
    android:background="@drawable/backgroud_gradient">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/tab_border"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/profile_tab"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tab_border_selected">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/profile"
                android:textColor="@color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/project_tab"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/projects"
                android:textColor="@color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/experience_tab_tab"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience" />
        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.appcompat.widget.LinearLayoutCompat>