<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ActivityLogin"
    android:background="@drawable/backgroud_gradient">

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@color/black_transparent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/admin_login"
                android:textColor="@color/white"
                android:textSize="@dimen/_23sdp"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@drawable/edt_main_bg"
                android:focusable="true"
                android:hint="@string/email"
                android:paddingStart="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_14ssp"
                tools:ignore="RtlSymmetry"
                />

            <RelativeLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@drawable/edt_main_bg">


                <EditText

                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:focusable="true"
                    android:background="@null"
                    android:hint="@string/password"
                    android:paddingStart="@dimen/_10sdp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_14ssp"
                    tools:ignore="RtlSymmetry"
                    />



            </RelativeLayout>




            <RelativeLayout
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.button.MaterialButton
                    android:layout_centerHorizontal="true"
                    android:id="@+id/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:backgroundTint="@color/secondary_color"
                    app:cornerRadius="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    />


            </RelativeLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>